for project showcase

--- a/web/css/combine.css
+++ b/web/css/combine.css
@@ -18,7 +18,8 @@ h4 {display: inline-block; margin-right: 10px; cursor: pointer;}
 #search div {margin-right: 10px;}
 #searchbox {width: 85%; display: inline-block; float: left;}
 .nbsp {margin-right: 4px}
-.trash {float: right;}
+.trash {margin-left: 20px;}
+.legend {margin-left: 30%;}
 
 /*------------enter effect----------------------------*/
 .dragover {box-shadow:0px 0px 8px #6318A8 !important;}
@@ -26,7 +27,8 @@ h4 {display: inline-block; margin-right: 10px; cursor: pointer;}
 
 /*------------operation part----------------------------------*/
 #operation {padding: 10px 0px; z-index: 10; /*width: 66.7%;*/ background-color: #fff; top: 50px;}
-#renameForm {margin-top: 10px; display: inline-block; margin-left: 20px;}
+/*#renameForm {margin-top: 10px; display: inline-block; margin-left: 20px;}*/
+#renameForm {margin-top: 10px; display: inline-block;}
 #renameForm input{width: 200px; display: inline-block;}
 .list-btn {background-color: #101010; border: none; padding: 7px 18px; color: #fff; font-size: 1.2em;}
 .list-btn:hover{text-decoration: none; color: #fff; background-color: #525252;}
